- #6997 Allow Windows to go to sleep depending on system preferences
- #7001 Add option to prevent computer from going to sleep
- #7029 | #7033 Wrong encoding for text copied between linux and windows
- #7015 Fix Windows service not starting up after sleep
- #7036 Fix tray icon not changing theme on Big Sur
- #7046 Fix MacOS 10.13 build
- #7049 Scroll doesn't work in case of macOS is server
- #7047 Fix prevent sleep option on Mac and Windows

Enhancements:
- #6998 Remove functionality related to the screen saver synchronisation
- #7026 Update the way we package OpenSSL for Windows build
- #7035 Add Fedora 34 build
- #7037 Add Ubuntu 21.04 build
- #7030 | #7041 | #7043 Add user notification for secure input on Mac
- #7044 Apply natural scroll setting independently on each client
- #7040 Support "Kana" and "Eisu" keys on Japanese Apple Pro Keyboard (JIS)
- #7047 Add prevent sleep option support to Linux
===========

v1.14.0-stable
===========
Bug fixes:
- #6953 | #6961 The system does not update server name in Server configuration
- #6966 macOS 10.13 missing build number
- #6968 System loses synchronisation between settings and configuration
- #6972 Fix SonarCloud security hotspots
- #6971 Fix vulnerabilities from SonarCloud
- #6974 Fix macOS 10.13 application filess
- #6975 Fix server stop working
- #6976 Fix windows builds
- #6979 Manual config error in client mode
- #6983 Fix that mac client listens on ipv4 only
- #6989 Fix client tray language switcher reverts to EN
- #6993 Fix issues with prefences UI
- #6992 UI issues and use cases
- #7000 Additional UI tweaks
- #7005 Fix User is not able to connect to server using ipv6 without wrapping IP in square quotes
- #7009 Clipboard sharing doesn't work on Linux system
- #7010 Fix Ubuntu 16.04 pipeline in Azure
- #7011 Fix language synchronisation checkbox spelling
- #7013 Wrong connection pop up appears if the user connects using a domain name which is assigned to list of IP's