@@ -21,6 +21,8 @@ file(GLOB sources "*.cpp")
 if (WIN32)
     file(GLOB arch_headers "win32/*.h")
     file(GLOB arch_sources "win32/*.cpp")
+    include_directories("../../../ext/WinToast/src")
+    list(APPEND arch_sources "../../../ext/WinToast/src/wintoastlib.cpp")
 elseif (UNIX)
     file(GLOB arch_headers "unix/*.h")
     file(GLOB arch_sources "unix/*.cpp")
